various small changes
- move settings.js to options.js
- update README
- add ejs dependency

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
           , "connect-assetmanager": "*"
           , "connect-assetmanager-handlers": "*"
           , "socket.io": ">= 0.7.4"
+          , "ejs": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
