--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
           , "connect-assetmanager-handlers": "*"
           , "socket.io": ">= 0.7.4"
           , "ejs": "*"
+          , "geoip-lite: "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
