--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "wargames!",
   "main": "server.js",
   "dependencies": {
-          "express": "2.4.3"
-          , "request": "*"
-          , "irc": "*"
-          , "connect": "*"
-          , "connect-assetmanager": "*"
-          , "connect-assetmanager-handlers": "*"
-          , "socket.io": ">= 0.7.4"
-          , "ejs": "*"
-          , "geoip-lite: "*"
+          "express": "2.4.3",
+          "request": "",
+          "irc": "",
+          "connect": "",
+          "connect-assetmanager": "",
+          "connect-assetmanager-handlers": "",
+          "socket.io": ">= 0.7.4",
+          "ejs": "",
+          "geoip-lite": ""
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
